kubernetes/apps/database/emqx/cluster/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx
spec:
  hostnames:
    - "emqx.ds47.dev"
  parentRefs:
    - name: kgateway-internal
      namespace: network

  rules:
    - backendRefs:
        - name: emqx-dashboard
          port: 18083
