kubernetes/apps/database/emqx/cluster/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard-route
  namespace: database
spec:
  parentRefs:
  - name: cilium-gateway
    namespace: network
  hostnames:
  - "emqx.apps.schwarz47.at"
  rules:
  - backendRefs:
    - name: emqx-dashboard
      port: 18083
